# plonky3-gpu

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  README.md
cmake/: project_version.cmake
src/: CMakeLists.txt
src/benches/: CMakeLists.txt  bench_fold_even_odd.cpp  bench_fold_even_odd_cuda.cu  transpose_benchmark.cpp
src/challenger/: CMakeLists.txt
src/challenger/include/: duplex_challenger.hpp
src/challenger/tests/: CMakeLists.txt  test_challenger.cpp
src/cmake/: poseidon-config.cmake.in
src/commit/: CMakeLists.txt
src/commit/include/: domain.hpp  extension_mmcs.hpp  mmcs.hpp
src/commit/tests/: CMakeLists.txt  test_commit.cpp
src/cuda/include/: cuda_compat.hpp
src/dft/: CMakeLists.txt  build_cpp.sh  build_cuda.sh
src/dft/include/: butterflies.hpp  ntt_cuda.hpp  radix2_dit.hpp  traits.hpp
src/dft/src/: ntt_cuda.cu
src/dft/tests/: CMakeLists.txt  test_dft.cpp
src/examples/: CMakeLists.txt  baby_bear_example.cpp  baby_bear_poseidon.cpp  baby_bear_poseidon2_cuda.cu  field_example.cpp  goldilocks_cuda_example.cu  goldilocks_example.cpp  goldilocks_poseidon.cpp  goldilocks_poseidon2_cuda.cu  matrix_cuda_example.cu  merkle_tree_cuda_example.cu  mersenne31_poseidon.cpp
src/field/: CMakeLists.txt  README.md  build_cpp.sh  build_cuda.sh
src/field/benches/: CMakeLists.txt  README.md  bench_field.cpp  build_and_run.sh
src/field/examples/: CMakeLists.txt  baby_bear_cuda_example.cu  field_demo.cpp  mersenne31_cuda_example.cu
src/field/include/: baby_bear.hpp  extension_field.hpp  mersenne31.hpp
src/field/tests/: CMakeLists.txt  test_extension_field.cpp
src/fri/: CMakeLists.txt  build_cpp.sh  build_cuda.sh
src/fri/include/: extension_mmcs.hpp  fri_fold_cuda.hpp  fri_folding.hpp  fri_params.hpp  fri_proof.hpp  fri_prover.hpp  fri_verifier.hpp  merkle_tree_mmcs.hpp  two_adic_fri_pcs.hpp
src/fri/src/: fri_fold_cuda.cu
src/fri/tests/: CMakeLists.txt  fri_test.cpp  test_fri.cpp  test_two_adic_fri_pcs.cpp
src/include/: air.hpp  batch_stark_proof.hpp  batch_stark_prover.hpp  batch_stark_verifier.hpp  bn254.hpp  butterflies.hpp  challenger_traits.hpp  check_constraints.hpp  circle_domain.hpp  circle_fft.hpp  circle_folding.hpp  circle_pcs.hpp  circle_stark.hpp  compression_from_hasher.hpp  constraint_folder.hpp  cuda_compat.hpp  dense_matrix.hpp  duplex_challenger.hpp  field.hpp  fri_extension_mmcs.hpp  fri_fold_cuda.hpp  fri_merkle_tree_mmcs.hpp  fri_verifier.hpp  goldilocks.hpp  hash.hpp  hash_challenger.hpp  keccak.hpp  koala_bear.hpp  matrix_extension.hpp  matrix_views.hpp  mds_matrix.hpp  merkle_tree_cuda.hpp  mersenne31.hpp  mersenne31_dft.hpp  monolith.hpp  multi_field_challenger.hpp  multi_field_sponge.hpp  naive_dft.hpp  ntt_cuda.hpp  padding_free_sponge.hpp  (+21 more)
src/include/p3_util/: linear_map.hpp  util.hpp
src/interpolation/: CMakeLists.txt
src/interpolation/include/: interpolation.hpp
src/interpolation/tests/: CMakeLists.txt  test_interpolation.cpp
src/matrix/: CMakeLists.txt  README.md  build_cpp.sh  build_cuda.sh
src/matrix/benches/: CMakeLists.txt  columnwise_dot_product.cpp
src/matrix/examples/: CMakeLists.txt  matrix_demo.cpp
src/matrix/include/: matrix.hpp  matrix_cuda.hpp  util.hpp
src/matrix/src/: matrix_cuda.cu
src/matrix/tests/: CMakeLists.txt  test_dense_matrix.cpp  test_util.cpp
src/merkle_tree/: CMakeLists.txt  build_cpp.sh  build_cuda.sh
src/merkle_tree/include/: merkle_cap.hpp  merkle_tree.hpp  merkle_tree_mmcs.hpp
src/merkle_tree/src/: merkle_tree_cuda.cu
src/merkle_tree/tests/: CMakeLists.txt  test_merkle_tree.cpp
src/poseidon/: CMakeLists.txt  README.md  build_cpp.sh
src/poseidon/examples/: CMakeLists.txt
src/poseidon/include/: poseidon.hpp
src/poseidon2/: CMakeLists.txt  README.md  build_cpp.sh  build_cuda.sh
src/poseidon2/cmake/: poseidon2-config.cmake.in
src/poseidon2/examples/: CMakeLists.txt  mersenne31_poseidon2_cuda.cu  simple_example.cpp
src/poseidon2/include/: external.hpp  generic.hpp  internal.hpp  poseidon2.hpp  poseidon2_cuda.hpp
src/scripts/: build_and_run_benches.sh  build_and_run_benches_cpp.sh  build_and_run_tests_cpp.sh  build_and_run_tests_cuda.sh  build_cpp.sh  build_cuda.sh
src/src/: matrix_cuda.cu
src/symmetric/: CMakeLists.txt
src/symmetric/include/: hash.hpp  padding_free_sponge.hpp  truncated_permutation.hpp
src/symmetric/tests/: CMakeLists.txt  test_symmetric.cpp
src/tests/: CMakeLists.txt  fri_test.cpp  test_air.cpp  test_batch_stark.cpp  test_bn254.cpp  test_challenger.cpp  test_challengers.cpp  test_circle_stark.cpp  test_dft_variants.cpp  test_fri_fold_cuda.cu  test_interpolation.cpp  test_keccak.cpp  test_keccak_cuda.cu  test_koala_bear.cpp  test_linear_map.cpp  test_matrix.cpp  test_matrix_cuda.cu  test_matrix_views.cpp  test_merkle_tree_cuda.cu  test_monolith.cpp  test_monolith_cuda.cu  test_ntt_cuda.cpp  test_poseidon2_cuda.cu  test_serialization.cpp  test_sha256.cpp  test_sha256_cuda.cu  test_symmetric.cpp  test_symmetric_extended.cpp  test_two_adic.cpp  test_uni_stark.cpp  test_util.cpp
src/util/: CMakeLists.txt  build_cpp.sh  build_cuda.sh
src/util/include/p3_util/: linear_map.hpp  util.hpp
src/util/tests/: CMakeLists.txt
